--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "grunt jasmine_nodejs",
-    "debug": "node-debug $(which grunt) jasmine_nodejs"
+    "debug": "node-debug $(which grunt) jasmine_nodejs",
+    "cover": "./node_modules/istanbul/lib/cli.js cover grunt jasmine_nodejs && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
     "coveralls": "^2.11.8",
     "grunt": "^0.4.5",
     "grunt-jasmine-nodejs": "^1.5.2",
+    "istanbul": "^0.4.3",
     "jasmine-core": "^2.4.1",
     "jasmine-node": "^1.14.5",
     "jasmine-spec-reporter": "^2.4.0"
